# jejuchat

./: .gitignore  .pre-commit-config.yaml  agent.py  app.py  app_wo_whisper.py  data.dvc  gemini_ex.py  modules.dvc  preprocess.ipynb  pyproject.toml  requirements.txt  ruff.toml  talk-gemini.py
.dvc/: config
data/: JEJU_PLACES_MERGED.csv  blueribbon.csv
geocode_script/: border.ipynb  distance_kakao.py  distance_mct.py  distance_park.py  distance_visualize.py  geo.ipynb  geo_kakao.py  geo_nominatim.py  geo_park.py  jeju_its_api.ipynb  join_blueribbon.py  join_park.py  merge_places_data.py
prompts/: __init__.py  answer_prompt.py  context_analysis_prompt.py  question_prompt.py  sql_prompt.py
questions/: __init__.py  context_analysis_question.py  example_question.py  validation_question.py
scripts/: blueribbon2csv.sh  crawl_naver_place.py
utils/: codes.py  geo_utils.py  inference_utils.py  naver.py  string_utils.py
